# ValorantPublicBotRepl

./: .gitignore  .replit  README.md  pyproject.toml  requirements.txt  riot.txt
ValorantBot/: main.py
ValorantBot/commands/: lft.py  rank.py  register.py
ValorantBot/util/: methods.py  sql.py
